--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: postgres_1
     hostname: postgres_1
     ports:
-      - "5432:5432"
+      - "5431:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -17,7 +17,7 @@ services:
     container_name: postgres_2
     hostname: postgres_2
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -28,7 +28,7 @@ services:
     container_name: postgres_3
     hostname: postgres_3
     ports:
-      - "5434:5432"
+      - "5433:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -39,8 +39,408 @@ services:
     container_name: postgres_4
     hostname: postgres_4
     ports:
+      - "5434:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres5:
+    image: postgres:11
+    container_name: postgres_5
+    hostname: postgres_5
+    ports:
       - "5435:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: my_db      
+
+  postgres6:
+    image: postgres:11
+    container_name: postgres_6
+    hostname: postgres_6
+    ports:
+      - "5436:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres7:
+    image: postgres:11
+    container_name: postgres_7
+    hostname: postgres_7
+    ports:
+      - "5437:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres8:
+    image: postgres:11
+    container_name: postgres_8
+    hostname: postgres_8
+    ports:
+      - "5438:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres9:
+    image: postgres:11
+    container_name: postgres_9
+    hostname: postgres_9
+    ports:
+      - "5439:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres10:
+    image: postgres:11
+    container_name: postgres_10
+    hostname: postgres_10
+    ports:
+      - "5440:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db            
+
+  postgres11:
+    image: postgres:11
+    container_name: postgres_11
+    hostname: postgres_11
+    ports:
+      - "5441:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres12:
+    image: postgres:11
+    container_name: postgres_12
+    hostname: postgres_12
+    ports:
+      - "5442:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres13:
+    image: postgres:11
+    container_name: postgres_13
+    hostname: postgres_13
+    ports:
+      - "5443:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+      
+  postgres14:
+    image: postgres:11
+    container_name: postgres_14
+    hostname: postgres_14
+    ports:
+      - "5444:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres15:
+    image: postgres:11
+    container_name: postgres_15
+    hostname: postgres_15
+    ports:
+      - "5445:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres16:
+    image: postgres:11
+    container_name: postgres_16
+    hostname: postgres_16
+    ports:
+      - "5446:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres17:
+    image: postgres:11
+    container_name: postgres_17
+    hostname: postgres_17
+    ports:
+      - "5447:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres18:
+    image: postgres:11
+    container_name: postgres_18
+    hostname: postgres_18
+    ports:
+      - "5448:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres19:
+    image: postgres:11
+    container_name: postgres_19
+    hostname: postgres_19
+    ports:
+      - "5449:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres20:
+    image: postgres:11
+    container_name: postgres_20
+    hostname: postgres_20
+    ports:
+      - "5450:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db              
+      
+      
+      
+      
+      
+  postgres21:
+    image: postgres:11
+    container_name: postgres_21
+    hostname: postgres_21
+    ports:
+      - "5451:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres22:
+    image: postgres:11
+    container_name: postgres_22
+    hostname: postgres_22
+    ports:
+      - "5452:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres23:
+    image: postgres:11
+    container_name: postgres_23
+    hostname: postgres_23
+    ports:
+      - "5453:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+      
+  postgres24:
+    image: postgres:11
+    container_name: postgres_24
+    hostname: postgres_24
+    ports:
+      - "5454:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres25:
+    image: postgres:11
+    container_name: postgres_25
+    hostname: postgres_25
+    ports:
+      - "5455:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres26:
+    image: postgres:11
+    container_name: postgres_26
+    hostname: postgres_26
+    ports:
+      - "5456:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres27:
+    image: postgres:11
+    container_name: postgres_27
+    hostname: postgres_27
+    ports:
+      - "5457:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres28:
+    image: postgres:11
+    container_name: postgres_28
+    hostname: postgres_28
+    ports:
+      - "5458:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres29:
+    image: postgres:11
+    container_name: postgres_29
+    hostname: postgres_29
+    ports:
+      - "5459:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres30:
+    image: postgres:11
+    container_name: postgres_30
+    hostname: postgres_30
+    ports:
+      - "5460:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db            
+
+  postgres31:
+    image: postgres:11
+    container_name: postgres_31
+    hostname: postgres_31
+    ports:
+      - "5461:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres32:
+    image: postgres:11
+    container_name: postgres_32
+    hostname: postgres_32
+    ports:
+      - "5462:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+
+  postgres33:
+    image: postgres:11
+    container_name: postgres_33
+    hostname: postgres_33
+    ports:
+      - "5463:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db
+      
+  postgres34:
+    image: postgres:11
+    container_name: postgres_34
+    hostname: postgres_34
+    ports:
+      - "5464:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres35:
+    image: postgres:11
+    container_name: postgres_35
+    hostname: postgres_35
+    ports:
+      - "5465:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres36:
+    image: postgres:11
+    container_name: postgres_36
+    hostname: postgres_36
+    ports:
+      - "5466:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres37:
+    image: postgres:11
+    container_name: postgres_37
+    hostname: postgres_37
+    ports:
+      - "5467:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres38:
+    image: postgres:11
+    container_name: postgres_38
+    hostname: postgres_38
+    ports:
+      - "5468:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres39:
+    image: postgres:11
+    container_name: postgres_39
+    hostname: postgres_39
+    ports:
+      - "5469:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db      
+
+  postgres40:
+    image: postgres:11
+    container_name: postgres_40
+    hostname: postgres_40
+    ports:
+      - "5470:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: my_db                
